# content-aggregator-bot

./: .dockerignore  .gitignore  .ignore  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  SETUP_TELEGRAM.md  SETUP_VK.md  collector.sh  docker-compose.dev.yml  docker-compose.yml  env.example  project_docs.md  pyproject.toml
app/: __init__.py  __main__.py  config.py  orchestrator.py
app/database/: __init__.py  models.py  repository.py
app/models/: __init__.py  content.py
app/publishers/: __init__.py  telegram.py
app/scrapers/: __init__.py  base.py  factory.py  telegram.py  vk.py
app/utils/: __init__.py  logger.py  rate_limiter.py  validators.py
config/: sources.yaml
